fix: Fix cell gap

--- a/src/Table.module.css
+++ b/src/Table.module.css
@@ -18,7 +18,6 @@
 }
 .tableGridColumn {
   margin-right: 0;
-  padding-right: 10px;
 }
 .tableColumn {
   padding: 0;
